# narrative

corporate-data-narrative-lab/: .gitignore  ABSURD_OFFICE_COMEDY_DATA_STANDARD.md  CASE_RUBRIC.md  CODEX_WORKFLOW.md  CONTRIBUTING.md  DATA_SCIENCE_CURRICULUM.md  DATA_VISUAL_EVIDENCE_GUIDE.md  HUMOR_GUIDE.md  NARRATIVE_PRINCIPLES.md  PROJECT_BRIEF.md  README.md  pyproject.toml
corporate-data-narrative-lab/.codex/: operating_principles.md  repo_map.md  skill_registry.md  task_protocol.md
corporate-data-narrative-lab/examples/: README.md
corporate-data-narrative-lab/examples/cases/: 01_dashboard_que_bajo_quejas_cerrando_boton.md  01_movimientos_pequenos_incentivos.md  02_cancelaciones_ventana_temporal.md  (+65 more)
corporate-data-narrative-lab/outputs/: .gitkeep
corporate-data-narrative-lab/prompts/: codex_create_full_case.md  codex_generate_case_batch_with_curriculum.md  codex_improve_existing_case.md  create_case_from_business_problem.md  create_case_from_chart.md  create_case_from_theme.md  generate_simple_html_case.md  review_case_quality.md  rewrite_with_tragicomic_humor.md
corporate-data-narrative-lab/templates/: case_story_template.md  html_story_template.html  review_template.md  skill_template.md  story_spine_template.md  synthetic_data_spec.md  visual_evidence_spec.md
corporate-data-narrative-lab/tests/: test_render_case_html.py  test_validate_case_structure.py  test_validate_html_story.py
corporate-data-narrative-lab/tools/: generate_simple_chart_html.py  generate_synthetic_data.py  render_case_html.py  validate_case_structure.py  validate_html_story.py
(+272 files in other folders)
